<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frontpage"
    android:focusable="true"
    android:id="@+id/loginFragment"
    android:focusableInTouchMode="true"
    android:scrollbarThumbHorizontal="@color/temafarve"
    tools:context=".LogInd">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="359dp"
            android:layout_height="174dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/safe_mi" />

        <LinearLayout
            android:id="@+id/LogIndOplysninger"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_border"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textAlignment="textStart"
                    android:textColor="#808080"
                    android:textColorHighlight="@color/temafarve"
                    android:textColorHint="#808080"
                    android:textColorLink="@color/temafarve" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_border"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="#808080"
                    android:textColorHighlight="@color/temafarve"
                    android:textColorHint="#808080" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LogIndOplysninger">

                <Button
                    android:id="@+id/LogIndKnap"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_border"
                    android:text="@string/Log_In_Knap" />

                <TextView
                    android:id="@+id/glemt_password"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/glemt_password"
                    android:textSize="16sp"
                    app:drawableTint="#00838F" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>